--- a/src/Cloud.Core.Authentication.AzureAuth/Cloud.Core.Authentication.AzureAuth.csproj
+++ b/src/Cloud.Core.Authentication.AzureAuth/Cloud.Core.Authentication.AzureAuth.csproj
@@ -1,25 +1,34 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <Company>Robert McCabe</Company>
     <IsPackable>true</IsPackable>
     <PackageId>Cloud.Core.Authentication.AzureAuth</PackageId>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageTags>Cloud.Core .net-Core Core Cloud.Core.Authentication AzureAuth</PackageTags>
     <PackageReleaseNotes />
-    <Description>Azure specific implementation of the IAuthentication interface.  Used to inject authentication into supported packages.</Description>
-    <Copyright>Robert McCabe</Copyright>
-    <Version>1.0</Version>
+    <Description>Azure specific implementation of the IAuthentication interface.  Used to create authentication token and inject into supported Cloud.Core packages and applications.</Description>
+    <Copyright>Aylesbury Solutions Ltd</Copyright>
+    <Version>3.1</Version>
+	<PackageIconUrl>https://cloud1core.blob.core.windows.net/icons/CC.png</PackageIconUrl>
     <Authors>Robert McCabe</Authors>
+    <ProjectGuid>{D135FD2D-2DE4-4A66-95C1-3EF1B8BA92B0}</ProjectGuid>
+	<RepositoryUrl>https://github.com/rmccabe24/Cloud.Core.Authentication.AzureAuth</RepositoryUrl>
+	<RepositoryType>Private</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cloud.Core" Version="1.0.2408.1" />
+    <PackageReference Include="Cloud.Core" Version="3.1.3438.6" />
     <PackageReference Include="Microsoft.Azure.Management.Fluent" Version="1.18.0" />
     <PackageReference Include="Microsoft.Azure.Management.ResourceManager.Fluent" Version="1.18.0" />
-    <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.2.0-preview" />
+    <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.2.1" />
     <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="3.19.8" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Extensions\" />
   </ItemGroup>
 
 </Project>
